2019-04-30  Jakub Jelinek  <jakub@redhat.com>

	* config/abi/post/riscv64-linux-gnu/baseline_symbols.txt: Update.

2019-04-29  Jonathan Wakely  <jwakely@redhat.com>

	* include/bits/stl_algo.h (generate_n): Adjust doxygen comment.

	* include/bits/move.h (swap(T&, T&), swap(T (&)[N], T (&)[N])): Use
	_GLIBCXX_NOEXCEPT_IF to simplify declarations.

	PR libstdc++/71312
	* src/c++11/shared_ptr.cc (get_mutex): Align pool mutexes to 64 bytes.

	* include/bits/stl_bvector.h (vector<bool>::empty()): Add nodiscard
	attribute.

	* include/bits/stl_iterator_base_types.h (_Iter_base): Remove unused
	class template and partial specialization.

	PR libstdc++/87982
	* include/bits/stl_algo.h (generate_n): Convert _Size parameter to
	an integral type.
	* include/bits/stl_algobase.h (__size_to_integer): New overloaded
	functions to convert a value to an integral type.
	(__fill_n_a, __fill_n_a): Assert that __n is already an integral type.
	(fill_n): Convert _Size parameter to an integral type.
	* testsuite/25_algorithms/fill_n/87982.cc: New test.
	* testsuite/25_algorithms/fill_n/87982_neg.cc: New test.
	* testsuite/25_algorithms/fill_n/dr426.cc: New test.
	* testsuite/25_algorithms/generate_n/87982.cc: New test.
	* testsuite/25_algorithms/generate_n/87982_neg.cc: New test.
	* testsuite/25_algorithms/generate_n/dr426.cc: New test.

2019-04-28  Nina Dinka Ranns  <dinka.ranns@gmail.com>

	Adding noexcept-specification on tuple constructors (LWG 2899)
	* libstdc++-v3/include/std/tuple:
	(tuple()): Add noexcept-specification.
	(tuple(const _Elements&...)): Likewise
	(tuple(_UElements&&...)): Likewise
	(tuple(const tuple<_UElements...>&)): Likewise
	(tuple(tuple<_UElements...>&&)): Likewise
	(tuple(const _T1&, const _T2&)): Likewise
	(tuple(_U1&&, _U2&&)): Likewise
	(tuple(const tuple<_U1, _U2>&): Likewise
	(tuple(tuple<_U1, _U2>&&): Likewise
	(tuple(const pair<_U1, _U2>&): Likewise
	(tuple(pair<_U1, _U2>&&): Likewise
	* libstdc++-v3/testsuite/20_util/tuple/cons/noexcept_specs.cc: New
